--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -56,6 +56,10 @@ flutter:
   # To add assets to your application, add an assets section, like this:
   assets:
     - assets/images/foodPyramid.png
+    - assets/images/odontoPediatria.png
+    - assets/images/children.png
+    - assets/images/poliUfrj.png
+    - assets/images/waiting.png
     - assets/icons/beans.png
     - assets/icons/bigMouth.png
     - assets/icons/brushAndToothPaste.png
@@ -119,6 +123,9 @@ flutter:
         - asset: assets/fonts/Quicksand-Bold.ttf
           weight: 700
         - asset: assets/fonts/Quicksand-Light.ttf
+    - family: KidsHandwriting
+      fonts:
+        - asset: assets/fonts/KidsHandwriting-Regular.ttf 
   #   - family: Trajan Pro
   #     fonts:
   #       - asset: fonts/TrajanPro.ttf
