--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -23,6 +23,9 @@ environment:
 dependencies:
   flutter:
     sdk: flutter
+  flare_flutter: ^2.0.6
+  flutter_localizations:
+    sdk: flutter
 
 
   # The following adds the Cupertino Icons font to your application.
@@ -37,6 +40,7 @@ dependencies:
   intl: ^0.16.1
   flutter_svg: ^0.18.1
   uuid: ^2.2.2
+  flutter_rounded_date_picker: ^1.0.5
 
 dev_dependencies:
   flutter_test:
@@ -103,6 +107,7 @@ flutter:
     - assets/svg/icecream.svg
     - assets/svg/candy.svg
     - assets/svg/lunch.svg
+    - assets/animations/successCheck.flr
 
   # An image asset can refer to one or more resolution-specific "variants", see
   # https://flutter.dev/assets-and-images/#resolution-aware.
