added chart to initial page

--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -41,6 +41,7 @@ dependencies:
   flutter_svg: ^0.18.1
   uuid: ^2.2.2
   flutter_rounded_date_picker: ^1.0.5
+  charts_flutter: ^0.9.0
 
 dev_dependencies:
   flutter_test:
@@ -101,6 +102,7 @@ flutter:
     - assets/icons/spaghetti.png
     - assets/icons/lasagna.png
     - assets/icons/teaCup.png
+    - assets/svg_food_items/coffeeCup.svg
     - assets/svg/afternoonSnack.svg
     - assets/svg/coffee.svg
     - assets/svg/dinner.svg
