--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -42,6 +42,7 @@ dependencies:
   uuid: ^2.2.2
   flutter_rounded_date_picker: ^1.0.5
   charts_flutter: ^0.9.0
+  get_it: ^5.0.1
 
 dev_dependencies:
   flutter_test:
