--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -31,14 +31,14 @@ dependencies:
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^0.1.3
-  firebase_core: ^0.5.0
-  cloud_firestore: ^0.14.0+2
-  firebase_auth: ^0.18.0+1
+  firebase_core: ^0.5.2+1
+  cloud_firestore: ^0.14.3+1
+  firebase_auth: ^0.18.3+1
   image_picker: ^0.6.7+7
-  firebase_storage: ^4.0.0
-  provider: ^4.3.2+1
+  firebase_storage: ^5.1.0
+  provider: ^4.3.2+2
   intl: ^0.16.1
-  flutter_svg: ^0.18.1
+  flutter_svg: ^0.19.1
   uuid: ^2.2.2
   flutter_rounded_date_picker: ^1.0.5
   charts_flutter: ^0.9.0
