--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -43,10 +43,18 @@ dependencies:
   flutter_rounded_date_picker: ^1.0.5
   charts_flutter: ^0.9.0
   get_it: ^5.0.1
+  video_player: ^1.0.1
 
 dev_dependencies:
   flutter_test:
     sdk: flutter
+  flutter_launcher_icons: ^0.8.1
+
+flutter_icons:
+  android: true
+  ios: true
+  image_path: "dev_assets/bigMouth.png"
+  adaptive_icon_background: "#00FFFF"
 
 # For information on the generic Dart part of this file, see the
 # following page: https://dart.dev/tools/pub/pubspec
@@ -61,61 +69,15 @@ flutter:
 
   # To add assets to your application, add an assets section, like this:
   assets:
-    - assets/images/foodPyramid.png
-    - assets/images/odontoPediatria.png
-    - assets/images/children.png
-    - assets/images/poliUfrj.png
-    - assets/images/waiting.png
-    - assets/icons/beans.png
-    - assets/icons/bigMouth.png
-    - assets/icons/brushAndToothPaste.png
-    - assets/icons/burguer.png
-    - assets/icons/candy.png
-    - assets/icons/cereals.png
-    - assets/icons/coffeeCup.png
-    - assets/icons/cookie.png
-    - assets/icons/eggs.png
-    - assets/icons/fruit.png
-    - assets/icons/meat.png
-    - assets/icons/medicine.png
-    - assets/icons/rice.png
-    - assets/icons/vegetables.png
-    - assets/icons/juice.png
-    - assets/icons/cheese.png
-    - assets/icons/bread.png
-    - assets/icons/biscuits.png
-    - assets/icons/cheeseSandwich.png
-    - assets/icons/chicken.png
-    - assets/icons/chickenLeg.png
-    - assets/icons/chocolateMilk.png
-    - assets/icons/coffeeMilk.png
-    - assets/icons/donut.png
-    - assets/icons/fish.png
-    - assets/icons/fries.png
-    - assets/icons/icecream.png
-    - assets/icons/jam.png
-    - assets/icons/juiceBox.png
-    - assets/icons/pieceOfCake.png
-    - assets/icons/pudding.png
-    - assets/icons/salad.png
-    - assets/icons/soda.png
-    - assets/icons/soup.png
-    - assets/icons/spaghetti.png
-    - assets/icons/lasagna.png
-    - assets/icons/teaCup.png
-    - assets/svg_food_items/coffeeCup.svg
-    - assets/svg/afternoonSnack.svg
-    - assets/svg/coffee.svg
-    - assets/svg/dinner.svg
-    - assets/svg/icecream.svg
-    - assets/svg/candy.svg
-    - assets/svg/lunch.svg
-    - assets/svg/healthyFood.svg
-    - assets/svg/toothbrushAndToothPaste.svg
-    - assets/svg/syrup.svg
-    - assets/svg/information.svg
-    - assets/svg/toothbrush.svg
-    - assets/animations/successCheck.flr
+    - assets/animations/
+    - assets/fonts/
+    - assets/icons/
+    - assets/images/
+    - assets/svg/
+    - assets/svg_food_items/
+    - assets/videos/
+
+  
 
   # An image asset can refer to one or more resolution-specific "variants", see
   # https://flutter.dev/assets-and-images/#resolution-aware.
