--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -44,6 +44,7 @@ dependencies:
   charts_flutter: ^0.9.0
   get_it: ^5.0.1
   video_player: ^1.0.1
+  connectivity: ^2.0.2
 
 dev_dependencies:
   flutter_test:
