--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -30,31 +30,28 @@ dependencies:
 
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
-  cupertino_icons: ^0.1.3
-  firebase_core: ^0.5.2+1
-  cloud_firestore: ^0.14.3+1
-  firebase_auth: ^0.18.3+1
-  image_picker: ^0.6.7+7
-  firebase_storage: ^5.1.0
-  provider: ^4.3.2+2
-  intl: ^0.16.1
-  flutter_svg: ^0.19.1
-  uuid: ^2.2.2
+  cupertino_icons: ^1.0.2
+  firebase_core: ^1.0.1
+  cloud_firestore: ^1.0.1
+  firebase_auth: ^1.0.1
+  image_picker: ^0.7.2+1
+  firebase_storage: ^8.0.0
+  provider: ^5.0.0
+  intl: ^0.17.0
+  flutter_svg: ^0.21.0-nullsafety.0
+  uuid: ^3.0.1
   flutter_rounded_date_picker: ^1.0.5
-  charts_flutter: ^0.9.0
-  get_it: ^5.0.1
-  video_player: ^1.0.1
-  connectivity: ^2.0.2
-  firebase_messaging: ^7.0.3
+  charts_flutter: ^0.10.0
+  get_it: ^6.0.0
+  video_player: ^2.0.2
+  connectivity: ^3.0.2
+  firebase_messaging: ^9.0.0
   mask_text_input_formatter: ^1.2.1
 
 dev_dependencies:
   flutter_test:
     sdk: flutter
-  flutter_launcher_icons: ^0.8.1
-
-dependency_overrides:
-  intl: ^0.16.0
+  flutter_launcher_icons: ^0.9.0
 
 flutter_icons:
   android: true
