--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -45,7 +45,7 @@ dependencies:
   get_it: ^6.0.0
   video_player: ^2.1.1
   connectivity: ^3.0.2
-  firebase_messaging: ^9.0.0
+  firebase_messaging: ^10.0.4
   mask_text_input_formatter: ^1.2.1
 
 dev_dependencies:
@@ -56,7 +56,7 @@ dev_dependencies:
 flutter_icons:
   android: true
   ios: true
-  image_path: "dev_assets/bigMouth.png"
+  image_path: "assets/launcher_icon/bigMouth.png"
   adaptive_icon_background: "#00FFFF"
 
 # For information on the generic Dart part of this file, see the
@@ -79,6 +79,7 @@ flutter:
     - assets/svg/
     - assets/svg_food_items/
     - assets/videos/
+    - assets/images/
     - assets/food_images/cario_food_imgs/
     - assets/food_images/not_cario_food_imgs/
     - assets/food_images/cereals_and_bread/
